# lexicon

./: .gitignore  README.md  dev.sh  lexicon-toggle  lexicon-toggle.sh  run.sh
architecture/: Mermaid Chart - Create complex, visual diagrams with text.-2026-02-24-134545.mmd
extensions/: automation.py  calculator.py  clear.py  clock.py  date.py  help.py  note.py  organ.py  person.py  sysmon.py  theme.py  timer.py  view.py  wadebug.py  weather.py  whatsapp.py
lexicon-backend/: pyproject.toml  run.sh  test_content_classifier.py  test_entity_resolver.py  test_extensions.py  test_help.py  test_memory.py  test_shell.py  test_workspace.py  test_ws.py
lexicon-backend/src/: automation.py  connection_manager.py  engine.py  entity_resolver.py  main.py  memory.py  organ_manager.py  run.py  shell.py  spine.py
lexicon-frontend/: package-lock.json  package.json
lexicon-frontend/src/: app.html
lexicon-frontend/src-tauri/: Cargo.toml  tauri.conf.json
lexicon-frontend/src-tauri/capabilities/: default.json  shell.json  whatsapp.json
lexicon-frontend/src-tauri/injections/: whatsapp_monitor.js
lexicon-frontend/src-tauri/organs/: whatsapp_organ.py  whatsapp_organ_monitor.js
lexicon-frontend/src-tauri/src/: lib.rs  main.rs
lexicon-frontend/src/lib/: ws.js
lexicon-frontend/src/lib/widgets/: AutomationWidget.svelte  CalculatorWidget.svelte  ClockWidget.svelte  DataViewWidget.svelte  index.js  (+11 more)
lexicon-frontend/src/routes/: +page.svelte
lexicon-shell/: README.md  pyproject.toml  run.sh  shell_server.py
themes/: cyberpunk.css  ember.css  midnight.css  rose-pine.css
