[project]
name = "lexicon-backend"
version = "0.1.0"
description = "Lexicon Brain — FastAPI + WebSocket deterministic grammar engine"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.0",
    "playwright>=1.58.0",
    "uvicorn[standard]>=0.41.0",
    "websockets>=15.0",
]

[project.scripts]
lexicon-brain = "src.run:main"
